# pio-esp32-mcp

./: .gitignore  .mcp.json  pyproject.toml
examples/blink_esp/src/: main.cpp
firmware/: platformio.ini
firmware/include/: config.example.h
firmware/src/: main.cpp
server/: main.py  schemas.py
server/tools/: esp_bridge.py  health.py  pio_tools.py
server/utils/: error_parser.py  pio_runner.py
tests/: test_esp_bridge.py  test_pio_tools.py
tests/utils/: test_error_parser.py  test_pio_runner.py
