[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-mcp-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["server*"]